--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 992) { /* TELAS MÉDIAS */
+@media screen and (min-width: 768px) and (max-width: 992px) { /* TELAS MÉDIAS */
 
     body {
         background-image: linear-gradient(to top, #2C2C2C, #FF7F50);
@@ -8,6 +8,7 @@
 
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -30,6 +31,7 @@
 
     section#login {
         width: 950px;
+        height: 400px;
     }
 
     section#login > div#imagem {
