--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,15 +30,15 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 
+    transform: translate(-50%, -50%);
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
@@ -62,5 +62,76 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 8px 0px;
+    border: 2px solid #FF7F50;
+    background-color: #FF7F50;
+}
+
+div.campo > label {
+    display: none;
+}
+
+div.campo > i {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: white;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    background-color: #2C2C2C;
+    color: white;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #3a3939;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #2C2C2C;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    padding-top: 5px;
+    margin-top: 5px;
+}
+
+form > a.botao:hover {
+    background-color: #3a3939;
+}
+
+form > a.botao > i {
     font-size: 0.8em;
 }
